[package]
name = "smack"
version = "0.1.0"
authors = ["Shaobo He <polarishehn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[lib]
crate-type = ['rlib']

[build-dependencies]
cc = "1.0"

[profile.dev]
incremental=false
